buildpacks/nodejs-engine/tests/snapshots/reinstalls_node_if_version_changes@heroku-builder-24__amd64.snap
---
source: test_support/src/lib.rs
---
# Heroku Node.js Engine

- Checking Node.js version
  - Detected Node.js version range: `>=14.0.0 <15.0.0-0`
  - Resolved Node.js version: `14.21.3`
- Installing Node.js distribution
  - Downloading Node.js `14.21.3 (linux-amd64)` from https://nodejs.org/download/release/v14.21.3/node-v14.21.3-linux-x64.tar.gz ... (<time_elapsed>)
  - Verifying checksum
  - Extracting Node.js `14.21.3 (linux-amd64)`
  - Installing Node.js `14.21.3 (linux-amd64)` ... (<time_elapsed>)
- Done (finished in <time_elapsed>)


--------------------------------------------- REBUILD ---------------------------------------------


# Heroku Node.js Engine

- Checking Node.js version
  - Detected Node.js version range: `>=16.0.0 <17.0.0-0`
  - Resolved Node.js version: `16.20.2`
- Installing Node.js distribution
  - Downloading Node.js `16.20.2 (linux-amd64)` from https://nodejs.org/download/release/v16.20.2/node-v16.20.2-linux-x64.tar.gz ... (<time_elapsed>)
  - Verifying checksum
  - Extracting Node.js `16.20.2 (linux-amd64)`
  - Installing Node.js `16.20.2 (linux-amd64)` ... (<time_elapsed>)
- Done (finished in <time_elapsed>)
